всановлено розмір свг вектор для десктопа

--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -25,49 +25,49 @@
   line-height: 130%;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
-  margin-bottom:20px;
+  margin-bottom: 20px;
 }
-.teacher-name{
-font-family: Montserrat;
-font-style: normal;
-font-weight: 800;
-font-size: 20px;
-line-height: 1.20;
-letter-spacing: 0.08em;
-color: var(--title-text-color);
-border-bottom: 1px solid #B9B9B9;
-padding-bottom:10px;
-margin-top:20px;
+.teacher-name {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+  color: var(--title-text-color);
+  border-bottom: 1px solid #b9b9b9;
+  padding-bottom: 10px;
+  margin-top: 20px;
 }
-.teacher-list-item{
-display:flex;
-font-family: Montserrat;
-font-style: normal;
-font-weight: 600;
-font-size: 14px;
-line-height: 1.214;
-letter-spacing: 0.06em;
-color: #111518;
-}
-
-.teacher-list{
-margin-top:20px;
-margin-bottom:5px;
+.teacher-list-item {
+  display: flex;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.06em;
+  color: #111518;
 }
 
-.teacher-list-item:not(:last-child){
-  padding-bottom:24px;
+.teacher-list {
+  margin-top: 20px;
+  margin-bottom: 5px;
 }
-.teacher-list-item::before{
-    content: '';
-    display:inline-table;
-    width: 17px;
-    height: 14px;
-    margin-right: 10px;
-    background-image: url(../images/study/vector.svg);
-    background-repeat: no-repeat;
+
+.teacher-list-item:not(:last-child) {
+  padding-bottom: 24px;
 }
-.line-orage{
+.teacher-list-item::before {
+  content: '';
+  display: inline-table;
+  width: 17px;
+  height: 14px;
+  margin-right: 10px;
+  background-image: url(../images/study/vector.svg);
+  background-repeat: no-repeat;
+}
+.line-orage {
   font-family: Montserrat;
   font-style: normal;
   font-weight: bold;
@@ -76,94 +76,98 @@ margin-bottom:5px;
   align-items: center;
   letter-spacing: 0.08em;
   color: var(--accent-color);
-  margin-bottom:5px;
+  margin-bottom: 5px;
 }
-.container-description{
-  margin-bottom:10px;
+.container-description {
+  margin-bottom: 10px;
 }
-.teacher-description-text{
-font-family: Montserrat;
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 1.666;
-color: var(--secondary-text-color);
+.teacher-description-text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.666;
+  color: var(--secondary-text-color);
 }
-.teacher-description-text:not(:last-child){
-  padding-bottom:24px;
+.teacher-description-text:not(:last-child) {
+  padding-bottom: 24px;
 }
-.teacher-link{
-font-family: Montserrat;
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 1.666;
-text-decoration-line: underline;
-color: #FF6B09;
+.teacher-link {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.666;
+  text-decoration-line: underline;
+  color: #ff6b09;
 }
 //====================================TABLET=========================//
-@media screen and (min-width: 768px){
-  .subtitle{
-    margin-bottom:30px;
+@media screen and (min-width: 768px) {
+  .subtitle {
+    margin-bottom: 30px;
   }
-  .teacher-container{
-    display:flex;
+  .teacher-container {
+    display: flex;
   }
-  .teacher-list-container-name{
-    width:402px;
-    margin-left:40px;
+  .teacher-list-container-name {
+    width: 402px;
+    margin-left: 40px;
   }
-  .teacher-name{
-   margin-top:0px;
-}
+  .teacher-name {
+    margin-top: 0px;
+  }
 }
 
 //====================================DESCTOP=========================//
-@media screen and (min-width: 1344px){
-  .subtitle{
+@media screen and (min-width: 1344px) {
+  .subtitle {
     font-size: 46px;
     line-height: 130%;
-    margin-bottom:50px;
+    margin-bottom: 50px;
   }
-  .teacher-container{
-    display:flex;
+  .teacher-container {
+    display: flex;
   }
-  .teacher-name{
-  font-size: 30px;
-  line-height: 1.233;
-}
-  .teacher-list-container-name{
-    margin-left:26px;
-    width:641px;
+  .teacher-name {
+    font-size: 30px;
+    line-height: 1.233;
   }
-.teacher-list-item{
-font-size: 16px;
- line-height: 1.25;
+  .teacher-list-container-name {
+    margin-left: 26px;
+    width: 642px;
+  }
+  .teacher-list-item {
+    font-size: 16px;
+    line-height: 1.25;
+  }
+  .teacher-list-item:not(:last-child) {
+    padding-bottom: 25px;
+  }
+  .teacher-list {
+    margin-top: 30px;
+    margin-bottom: 15px;
+  }
+  .teacher-description-text {
+    font-size: 18px;
+    line-height: 1.555;
+  }
+  .teacher-description-text:not(:last-child) {
+    padding-bottom: 30px;
+  }
+  .teacher-link {
+    font-size: 18px;
+    line-height: 1.555;
+  }
+  .container-description {
+    margin-bottom: 20px;
+    margin-top: 15px;
+  }
+  .teacher-list-item::before {
+    width: 24px;
+    height: 20px;
+    margin-right: 34px;
+  }
 }
-  .teacher-list-item:not(:last-child){
-  padding-bottom:36px;
-}
- .teacher-list{
- margin-top:30px;
- margin-bottom:15px;
-}
-.teacher-description-text{
-font-size: 18px;
-line-height: 1.555;
-}
-.teacher-description-text:not(:last-child){
-  padding-bottom:30px;
-}
-.teacher-link{
-font-size: 18px;
-line-height: 1.555;
-}
-.container-description{
-  margin-bottom:20px;
-  margin-top:15px;
-}
-}
-
 //===========================GUARANTEE SECTION==================//
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
