--- a/src/partials/images.html
+++ b/src/partials/images.html
@@ -1,5 +1,6 @@
 <section class="images">
     <div class="images-container">
+        <h2 style="display: none;">Examples</h2>
        <div class="images-section">
         <img alt="Cow" src="./images/imagesSection/image320.jpg" srcset="
         ./images/imagesSection/image320.jpg 320w,
