Добавлена десктопная версия

--- a/src/sass/components/_comment.scss
+++ b/src/sass/components/_comment.scss
@@ -217,6 +217,9 @@
   .comments__name {
     margin-top: 0px;
     text-align: start;
+    font-size: 20px;
+    line-height: 1.2em;
+    letter-spacing: 0.08em;
   }
 
   .comments__bio {
@@ -242,6 +245,48 @@
 
   .slick-dots {
     margin-top: 30px;
+  }
+
+  .slider .slick-dots li:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1316px) {
+  .comments__heading {
+    font-size: 46px;
+  }
+
+  .comments__text {
+    font-size: 18px;
+    line-height: 1.556em;
+  }
+
+  .comments__bio {
+    margin-top: 10px;
+  }
+
+  .comments__name {
+    font-size: 30px;
+    line-height: 1.233em;
+  }
+
+  .comments__article {
+    padding: 50px;
+    margin-top: 50px;
+    max-width: 1090px;
+  }
+
+  .comments__text {
+    min-width: 706px;
+  }
+
+  .comments {
+    margin-bottom: 130px;
+  }
+
+  .slick-dots {
+    margin-top: 40px;
   }
 }
 
