--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,31 +14,31 @@
      <ul class="hero-images">
         <li class="hero-ellipse">
             <picture>
-           <source srcset="./images/hero/ellipse_mob.png"  media="(max-width:767px") />
-           <source srcset="./images/hero/ellipse_tab.png" media="(max-width:1199px") />
-           <source srcset="./images/hero/ellipse_desk.png" media="(min-width:1200px") />
-           <img src="./images/hero/ellipse_mob.png" alt="">     
+                <source srcset="./images/hero/ellipse_desk.png"  media="(min-width:1280px") />
+                <source srcset="./images/hero/ellipse_tab.png" media="(min-width: 768px") />
+                <source srcset="./images/hero/ellipse_mob.png" media="(min-width:320px") />
+           <img src="./images/hero/ellipse_tab.png" alt="">     
            </picture>
        </li>
          <li class="hero-horn">
              <picture>
-            <source srcset="./images/hero/horn_mob.png"  media="(max-width:767px") />
-            <source srcset="./images/hero/horn_tab.png" media="(max-width:1199px") />
-            <source srcset="./images/hero/horn_deks.png" media="(min-width:1200px") />
+            <source srcset="./images/hero/horn_deks.png"  media="(min-width:1280px") />
+            <source srcset="./images/hero/horn_tab.png" media="(min-width: 768px") />
+            <source srcset="./images/hero/horn_mob.png" media="(min-width:320px") />
             <img src="./images/hero/horn_mob.png" alt="">     
             </picture>
         </li>
        <li>
         <picture class="hero-jug">
-       <source srcset="./images/hero/milk_tab.png" media="(max-width:1199px") />
-       <source srcset="./images/hero/milk_deks.png" media="(min-width:1200px") />
+       <source srcset="./images/hero/milk_tab.png" media="(max-width:1279px") />
+       <source srcset="./images/hero/milk_deks.png" media="(min-width:1280px") />
        <img src="./images/hero/milk_tab.png" alt="">     
        </picture>
    </li>
    <li>
     <picture class="hero-women">
-   <source srcset="./images/hero/women_tab.png" media="(max-width:1199px") />
-   <source srcset="./images/hero/women_deks.png" media="(min-width:1200px") />
+   <source srcset="./images/hero/women_tab.png" media="(max-width:1279px") />
+   <source srcset="./images/hero/women_deks.png" media="(min-width:1280px") />
    <img src="./images/hero/women_tab.png" alt="">     
    </picture>
 </li>
