--- a/src/partials/programm.html
+++ b/src/partials/programm.html
@@ -1,8 +1,8 @@
-
 <section class="section program-section">
     <div class="program-container">
-        <div class="program-line"></div>
         <div class="container">
+            <div class="program-line"></div>
+
             <h2 class="program-title">
                 Наша программа
             </h2>
@@ -13,7 +13,7 @@
                         <ul class="program-item-semester">
                             <li class="program-item-grammar">
                                 <p class="program-item-subtitle">Grammar</p>
-        
+
                                 <ul class="program-topics">
                                     <li class="program-topics-item">Nouns & Articles </li>
                                     <li class="program-topics-item">Adjectives & Adverb</li>
@@ -116,13 +116,14 @@
                     </li>
                 </ul>
                 <picture class="program-list-picture">
-                    <source srcset="./images/programm-desk.png 1x, ./images/programm-desk@2x.png 2x" media="(min-width: 1200px)"
-                        type="image/png">
+                    <source srcset="./images/programm-desk.png 1x, ./images/programm-desk@2x.png 2x"
+                        media="(min-width: 1200px)" type="image/png">
                     <source srcset="./images/programm-tablet.png 1x, ./images/programm-tablet@2x.png 2x"
                         media="(min-width: 768px)" type="image/png">
                     <source srcset="./images/programm-mobile.png 1x, ./images/programm-mobile@2x.png 2x"
                         media="(min-width: 320px)" type="image/png">
-                    <img class="program-list-img" src="./images/programm-mobile.png" alt="предподаватель проводит занятие" />
+                    <img class="program-list-img" src="./images/programm-mobile.png"
+                        alt="предподаватель проводит занятие" />
                 </picture>
             </div>
             <div class="program-dignity">
@@ -158,5 +159,5 @@
             </div>
         </div>
     </div>
-   
+
 </section>
