--- a/src/sass/_problems.scss
+++ b/src/sass/_problems.scss
@@ -95,6 +95,8 @@
 .problems-block-white {
   background-color: var(--txt-light);
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+  margin-left: auto;
+  margin-right: auto;
   // margin:  0 auto;
   @media screen and (min-width: 320px) and (max-width: 767px) {
     width: 280px;
