--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -681,6 +681,8 @@ a {
   background-color: var(--txt-light);
   -webkit-box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
           box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+  margin-left: auto;
+  margin-right: auto;
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .problems-block-white {
@@ -1047,10 +1049,13 @@ a {
   min-height: 2370px;
 }
 
+.program-container {
+  background: var(--b-dark);
+}
+
 .program-section .container {
   padding-top: 50px;
   position: relative;
-  background: var(--b-dark);
 }
 
 .program-title {
@@ -1168,7 +1173,6 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  left: 20px;
   padding: 20px 31px;
 }
 
@@ -1386,7 +1390,6 @@ a {
 
   .program-container {
     width: 100%;
-    background: var(--b-dark);
   }
 
   .program-title {
