--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -1,7 +1,7 @@
-.page-header {
-  position: absolute;
-  width: 100%;
-}
+// .page-header {
+//   position: absolute;
+//   width: 100%;
+// }
 
 .nav-container {
   display: flex;
@@ -80,7 +80,9 @@
   z-index: 100;
   background-color: transparent;
   cursor: pointer;
-
+@media screen and(max-width:767px){
+  padding-top: 0;
+}
   & .menu-close-icon {
     display: none;
   }
