--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import './layout/container';
 @import './layout/page-header';
 @import './layout/hero';
+@import './layout/problems';
 @import './layout/page-how-do';
 @import './layout/program-section';
 @import './layout/section-teacher';
@@ -21,7 +22,6 @@
 @import './layout/page-footer';
 
 @import './components/body';
-@import './components/problems';
 @import './components/modal-btn';
 
 
