--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 
 //html
 @import './components/hero';
+@import './components/modal-button';
 @import './components/products';
 @import './components/how-made';
 @import './components/gallery';
