--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,245 @@ h3 {
   }
 }
 
+.hero {
+  background-color: #ffb8ca;
+}
+
+.hero-section {
+  background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 739px) {
+  .hero-section {
+    padding-top: 92px;
+    padding-bottom: 160px;
+    background-image: url("./../images/hero/icecream/icecream-tablet@1x.png"), url("./../images/hero/eclipse.svg");
+    background-size: 171px 410px, 346px 344px;
+    background-position: left calc(50% + 40px) bottom, left calc(50% + 45px) top 21px;
+  }
+}
+
+.header {
+  width: 100%;
+}
+
+.header-navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.nav-list__item {
+  padding-right: 35px;
+}
+
+.nav-list__item:last-child {
+  padding-right: 0;
+}
+
+.nav-list__link {
+  font-size: 14px;
+  line-height: 1.28;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-list__link:hover, .nav-list__link:focus {
+  color: #d41443;
+}
+
+@media screen and (max-width: 1279px) {
+  .nav-list {
+    display: none;
+  }
+}
+
+.btn-menu-open {
+  padding: 0;
+  background-color: #ffb8ca;
+}
+
+.nav-buttons {
+  display: flex;
+  align-items: center;
+}
+
+.btn-purchase {
+  height: 44px;
+  width: 209px;
+  font-size: 16px;
+  line-height: 1.4;
+  border-radius: 22px;
+  border-width: 0;
+  color: #d41443;
+  background-color: #ffffff;
+  margin-left: 30px;
+}
+
+.btn-purchase:focus, .btn-purchase:hover {
+  background-color: #907e82;
+}
+
+@media screen and (max-width: 767px) {
+  .btn-purchase {
+    display: none;
+  }
+}
+
+.menu-open {
+  margin-left: 12px;
+}
+
+.icon-open {
+  fill: #d41443;
+}
+
+.hero-title {
+  font-family: Titan One, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.hero-title .text {
+  font-size: 42px;
+  color: #d41443;
+}
+
+.hero-buttons {
+  display: flex;
+}
+
+.hero-button {
+  display: block;
+  height: 24px;
+  font-size: 8px;
+  line-height: 1.25;
+  border-radius: 20px;
+  border: none;
+}
+
+.hero-button.red {
+  width: 63px;
+  color: #ffffff;
+  background-color: #d41443;
+}
+
+.hero-button.white {
+  width: 83px;
+  margin-left: 8px;
+  color: #d41443;
+  background-color: #ffffff;
+}
+
+.modal-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: calc(100% - 250px);
+  background-color: #e17992;
+  opacity: 1;
+  overflow-y: scroll;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 99;
+}
+
+.modal-menu.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.is-hidden .menu-container {
+  transform: translateX(100%);
+}
+
+.menu-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  height: 100%;
+  padding-top: 60px;
+  background-color: inherit;
+  transform: translateX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-menu-close {
+  position: absolute;
+  top: 23px;
+  right: 28px;
+  background-color: transparent;
+}
+
+.menu-container .btn-purchase {
+  display: inline-block;
+  width: 209px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 19px;
+}
+
+.menu-container .btn-purchase:after {
+  margin-left: 15px;
+}
+
+.menu-item {
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-top-color: #E18298;
+}
+
+.menu-item:last-child {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #E18298;
+}
+
+.menu-link {
+  display: inline-block;
+  width: 100%;
+  padding-top: 11px;
+  padding-right: 21px;
+  padding-bottom: 12px;
+  padding-left: 21px;
+  color: #ffffff;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.3;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-link:focus, .menu-link:hover {
+  color: #d41443;
+}
+
+.menu-link.active {
+  color: #d41443;
+}
+
 .gallery {
   margin-left: auto;
   margin-right: auto;
