--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -11,10 +11,10 @@
     </p>
     <div class="input-wrapper">
         <label class="reg-input">
-            <input type="text" name="user-name" class="user-name-input" placeholder="Имя*">
+            <input type="text" name="user-name" class="user-name-input" pattern="^[А-Яа-яЁё\s]+$" placeholder="Имя*">
         </label>
         <label class="reg-input">
-            <input type="text" name="user-tel" class="user-tel-input" placeholder="Телефон*">
+            <input type="text" name="user-tel" class="user-tel-input" pattern="^[0-9]+$" placeholder="Телефон*">
         </label>
     </div>
     <button type="button" class="free-lesson">хочу на бесплатное занятие</button>
