--- a/src/sass/layout/_advantage.scss
+++ b/src/sass/layout/_advantage.scss
@@ -13,12 +13,14 @@
   margin: 0 auto;
   width: 280px;
   height: 280px;
-  padding-top: 30px;
-  padding-bottom: 25px;
-  padding-left: 5px;
-  padding-right: 5px;
+
   background-color: $white;
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+}
+
+.advantages-list__link {
+  display: block;
+  padding: 30px 5px 25px 5px;
 
   transition-property: background-color;
   transition-duration: 250ms;
@@ -27,6 +29,7 @@
   &:focus,
   &:hover {
     background-color: $orange;
+    cursor: pointer;
 
     .advantages-list__icon {
       fill: $white;
@@ -107,10 +110,11 @@
   .advantages-list__item {
     width: 334px;
     height: 334px;
-    padding-top: 40px;
-    padding-bottom: 25px;
-    padding-left: 20px;
-    padding-right: 20px;
+  }
+
+  .advantages-list__link {
+    padding: 40px 20px 25px 20px;
+    height: 334px;
   }
 
   .advantages-list__icon {
@@ -125,7 +129,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1344px) {
+@media screen and (min-width: 768px) and (max-width: 1343px) {
   .advantages-list__item {
     &:nth-child(2n + 1) {
       margin-right: 20px;
@@ -146,9 +150,6 @@
   .advantages-list__item {
     width: 424px;
     height: 396px;
-    padding-bottom: 55px;
-    padding-left: 30px;
-    padding-right: 30px;
 
     &:not(:nth-child(3n)) {
       margin-right: 20px;
@@ -157,6 +158,13 @@
     &:not(:nth-child(n + 4)) {
       margin-bottom: 20px;
     }
+  }
+
+  .advantages-list__link {
+    height: 396px;
+    padding-bottom: 55px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .advantages-list__title {
