--- a/src/partials/advantage.html
+++ b/src/partials/advantage.html
@@ -3,79 +3,91 @@
     <h2 class="advantages__title">Как мы это делаем</h2>
     <ul class="advantages-list">
       <li class="advantages-list__item">
-        <svg class="advantages-list__icon" width="45px" height="48px">
-          <use href="./icons/advantages-sprite.svg#advantage01"></use>
-        </svg>
-        <h3 class="advantages-list__title">
-          Адаптированная программа <br> подготовки к ВНО
-        </h3>
-        <p class="advantage-list__text">
-          Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать сочинения.
-        </p>
+        <a class="advantages-list__link" href="">
+          <svg class="advantages-list__icon" width="45px" height="48px">
+            <use href="./icons/advantages-sprite.svg#advantage01"></use>
+          </svg>
+          <h3 class="advantages-list__title">
+            Адаптированная программа <br> подготовки к ВНО
+          </h3>
+          <p class="advantage-list__text">
+            Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать сочинения.
+          </p>
+        </a>
       </li>
 
       <li class="advantages-list__item">
-        <svg class="advantages-list__icon" width="48px" height="47px">
-          <use href="./icons/advantages-sprite.svg#advantage02"></use>
-        </svg>
-        <h3 class="advantages-list__title">
-          Аудитория и <br> онлайн-обучение
-        </h3>
-        <p class="advantage-list__text">
-          Учитель поможет не только в аудитории, но и во время домашней подготовки. Родители могут участвовать в чате
-          при желании.
-        </p>
+        <a class="advantages-list__link" href="">
+          <svg class="advantages-list__icon" width="48px" height="47px">
+            <use href="./icons/advantages-sprite.svg#advantage02"></use>
+          </svg>
+          <h3 class="advantages-list__title">
+            Аудитория и <br> онлайн-обучение
+          </h3>
+          <p class="advantage-list__text">
+            Учитель поможет не только в аудитории, но и во время домашней подготовки. Родители могут участвовать в чате
+            при желании.
+          </p>
+        </a>
       </li>
 
       <li class="advantages-list__item">
-        <svg class="advantages-list__icon" width="68px" height="48px">
-          <use href="./icons/advantages-sprite.svg#advantage03"></use>
-        </svg>
-        <h3 class="advantages-list__title">
-          Привычка читать на <br> английском языке
-        </h3>
-        <p class="advantage-list__text">
-          Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон дважды
-          в неделю.
-        </p>
+        <a class="advantages-list__link" href="">
+          <svg class="advantages-list__icon" width="68px" height="48px">
+            <use href="./icons/advantages-sprite.svg#advantage03"></use>
+          </svg>
+          <h3 class="advantages-list__title">
+            Привычка читать на <br> английском языке
+          </h3>
+          <p class="advantage-list__text">
+            Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон дважды
+            в неделю.
+          </p>
+        </a>
       </li>
 
       <li class="advantages-list__item">
-        <svg class="advantages-list__icon" width="48px" height="48px">
-          <use href="./icons/advantages-sprite.svg#advantage04"></use>
-        </svg>
-        <h3 class="advantages-list__title">
-          Психологическая <br> поддержка
-        </h3>
-        <p class="advantage-list__text">
-          Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности в себе.
-        </p>
+        <a class="advantages-list__link" href="">
+          <svg class="advantages-list__icon" width="48px" height="48px">
+            <use href="./icons/advantages-sprite.svg#advantage04"></use>
+          </svg>
+          <h3 class="advantages-list__title">
+            Психологическая <br> поддержка
+          </h3>
+          <p class="advantage-list__text">
+            Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности в себе.
+          </p>
+        </a>
       </li>
 
       <li class="advantages-list__item">
-        <svg class="advantages-list__icon" width="40px" height="48px">
-          <use href="./icons/advantages-sprite.svg#advantage05"></use>
-        </svg>
-        <h3 class="advantages-list__title">
-          Обучение по авторским <br> пособиям
-        </h3>
-        <p class="advantage-list__text">
-          Тебе не нужно тратить время на самостоятельный поиск материала и ничего покупать дополнительно. Мы составили
-          2 пособия для тебя.
-        </p>
+       <a class="advantages-list__link" href="">
+          <svg class="advantages-list__icon" width="40px" height="48px">
+            <use href="./icons/advantages-sprite.svg#advantage05"></use>
+          </svg>
+          <h3 class="advantages-list__title">
+            Обучение по авторским <br> пособиям
+          </h3>
+          <p class="advantage-list__text">
+            Тебе не нужно тратить время на самостоятельный поиск материала и ничего покупать дополнительно. Мы составили
+            2 пособия для тебя.
+          </p>
+       </a>
       </li>
 
       <li class="advantages-list__item">
-        <svg class="advantages-list__icon" width="57px" height="48px">
-          <use href="./icons/advantages-sprite.svg#advantage06"></use>
-        </svg>
-        <h3 class="advantages-list__title">
-          Умение воспринимать <br> устную английскую речь
-        </h3>
-        <p class="advantage-list__text">
-          “F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать и разбирать аудиозаписи в соответствии с
-          изучаемой лексикой.
-        </p>
+        <a class="advantages-list__link" href="">
+          <svg class="advantages-list__icon" width="57px" height="48px">
+            <use href="./icons/advantages-sprite.svg#advantage06"></use>
+          </svg>
+          <h3 class="advantages-list__title">
+            Умение воспринимать <br> устную английскую речь
+          </h3>
+          <p class="advantage-list__text">
+            “F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать и разбирать аудиозаписи в соответствии с
+            изучаемой лексикой.
+          </p>
+        </a>
       </li>
     </ul>
 
