изменения классов отступов кнопки для таблетки и десктоп.

--- a/src/sass/layout/_reg-form.scss
+++ b/src/sass/layout/_reg-form.scss
@@ -123,8 +123,10 @@
   .form-input {
     width: 390px;
   }
+}
 
-  .btn {
+@media screen and (min-width: 768px) and (max-width: 1343px) {
+  .form-btn {
     margin-top: 31px;
   }
 }
@@ -172,11 +174,14 @@
   }
 
   .btn {
-    font-size: 14px;
+    font-size: 15px;
     line-height: 1.214;
     min-width: 354px;
     height: 70px;
     padding: 27px 25px;
+  }
+
+  .fotm-btn {
     margin-top: 80px;
   }
 }
