bg-img section problems

--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -2,10 +2,10 @@
     width: 100%;
     padding-left: 20px;
     padding-right: 20px;
-    margin: 0 auto; 
 }
+
 .problem {
-    margin-bottom: 148px;
+    margin-bottom: 107px;
     min-width: 320px;
     height: 545px;
     padding-bottom: 205px;
@@ -29,12 +29,12 @@
 }
 
 .problem-list-container {
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
     padding: 20px 14px 20px 30px;
-    max-width: 280px;
     max-height: 488px;
-    top: 27px;
-    margin: 0 auto;
+    margin-top: 27px;
 
     background-color: #FFFFFF;
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
@@ -96,8 +96,11 @@
 @media screen and (min-width: 768px) {
     .problem-section-container {
         max-width: 768px;
+        padding-left: 40px;
+        padding-right: 40px;
         margin: 0 auto;
     }
+
    .problem {
     margin-bottom: 152px;
     min-width: 768px;
@@ -114,12 +117,9 @@
 }
 
 .problem-list-container {
-    position: relative;
     padding: 30px 49px 26px 96px;
-    max-width: 688px;
     max-height: 303px;
-    top: 25px;
-    margin: 0 auto;
+    margin-top: 25px;
 
     background-color: #FFFFFF;
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
@@ -149,10 +149,12 @@
     }
     .problem {
         margin-bottom: 150px;
-        min-width: 1680px;
         height: 560px;
         padding-bottom: 348px;
         background-color: #111518;
+        background-image: url("../images/problems-bg.png");
+        background-repeat: no-repeat;
+        background-position: 100% 100%;
     }
 
     .problem-title {
@@ -163,16 +165,12 @@
     }
     
     .problem-list-container {
-        position: relative;
         padding: 70px 112px 62px 114px;
-        max-width: 1314px;
         max-height: 362px;
-        top: 70px;
-        margin: 0 auto;
+        margin-top: 70px;
     
         background-color: #FFFFFF;
         box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-        // margin-bottom: 130px;
     }
 
 
@@ -205,9 +203,5 @@
     letter-spacing: 0.08em;
     align-items: center;
    }
-
-//    .problems-picture {
-       
-//    }
 
 }
