--- a/src/sass/components/_we_do_it.scss
+++ b/src/sass/components/_we_do_it.scss
@@ -24,10 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    margin-right: auto;
-    margin-left: auto;
-    
+    align-items: center; 
 }
 
 .doit-item {
@@ -136,6 +133,8 @@
         max-width: 768px;
         margin-top: 50px;
         margin-bottom: 50px;
+        padding-right: 40px;
+        padding-left: 40px;
     }
     .doit-title {
         font-size: 26px;
