--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,40 +1,42 @@
 <section class="hero">
-  <div class="hero-title-box">
-    <h1 class="hero-title">Ice cream made with<span>passion</span></h1>
-    <ul class="hero-btn-list">
-      <li class="hero-btn-item">
-        <button class="hero-btn-left button" type="button">Products</button>
-      </li>
-      <li class="hero-btn-item">
-        <button class="hero-btn-right button" type="button">
-          How it's made?
-        </button>
-      </li>
-    </ul>
-  </div>
+  <div class="container">
+    <div class="hero-title-box">
+      <h1 class="hero-title">Ice cream made with <span>passion</span></h1>
+      <ul class="hero-btn-list list">
+        <li class="hero-btn-item">
+          <button class="hero-btn-left button" type="button">Products</button>
+        </li>
+        <li class="hero-btn-item">
+          <button class="hero-btn-right button" type="button">
+            How it's made?
+          </button>
+        </li>
+      </ul>
+    </div>
 
-  <div class="hero-counter-box">
-    <ul class="hero-counter-list">
-      <li class="hero-counter-item">
-        <p class="quantity">16</p>
-        <p class="quantity-description">cafes</p>
-      </li>
-      <li class="hero-counter-item">
-        <p class="quantity">23</p>
-        <p class="quantity-description">food trucks</p>
-      </li>
-    </ul>
-  </div>
+    <div class="hero-counter-box">
+      <ul class="hero-counter-list list">
+        <li class="hero-counter-item">
+          <p class="quantity">16</p>
+          <p class="quantity-description">cafes</p>
+        </li>
+        <li class="hero-counter-item">
+          <p class="quantity">23</p>
+          <p class="quantity-description">food trucks</p>
+        </li>
+      </ul>
+    </div>
 
-  <div class="hero-text-box">
-    <p class="hero-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et
-    </p>
-    <button class="next-btn" type="button">
-      <svg class="next-btn-icon" width="18" height="18">
-        <use href="./images/icons/arrow-right.svg"></use>
-      </svg>
-    </button>
+    <div class="hero-text-box">
+      <p class="hero-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et
+      </p>
+      <button class="next-btn" type="button">
+        <svg class="next-btn-icon" width="18" height="18">
+          <use href="./images/icons/arrow-right.svg"></use>
+        </svg>
+      </button>
+    </div>
   </div>
 </section>
