problems desktop2 готова

--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,5 +1,5 @@
 <section class="problems">
-  <div class="container">
+  <div class="container thumb-img">
     <h2 class="problems__title">
       Главные проблемы учеников на English ВНО, которые мы
       <span class="problems__title--accent">помогаем</span> решить
