--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,8 +1,16 @@
 .container {
   width: 320px;
 
-  margin-left: auto;
-  margin-right: auto;
   padding-right: 20px;
   padding-left: 20px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 768px) {
+    width: 700px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 970px;
+  }
 }
