Размеры и цвет шрифтов

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,7 +31,7 @@
       </address>
     </div>
     <div>
-      <p>&copy 2019 - IceCream. All Rights Reserved.</p>
+      <p class="copyright">&copy 2019 - IceCream. All Rights Reserved.</p>
     </div>
  
 </footer>
