--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,3 +1,38 @@
 .footer {
   background-color: #fff5f6;
 }
+p {
+  font-family: Titan One;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 21px;
+text-transform: uppercase;
+color: #FFA5BA;
+}
+ul {
+  list-style: none;
+
+}
+h3 {
+  font-family: Titan One;
+font-style: normal;
+font-weight: normal;
+font-size: 34px;
+line-height: 1.14;
+letter-spacing: 0.04em;
+text-transform: uppercase;
+color: #D41443;
+}
+a {
+  text-decoration: none;
+}
+.copyright {
+  font-family: DM Sans;
+font-style: normal;
+font-weight: bold;
+font-size: 14px;
+line-height: 1.52;
+text-align: center;
+color: #907E82;
+}
