--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -126,25 +126,46 @@
     color: var(--orange-color);
     text-decoration: underline;
   }
-  // =========
+  // =========================================нижние фото описания отзыва
+
   .comments-under__list {
+    position: relative;
     margin-top: 20px;
     margin-bottom: 50px;
     display: flex;
     justify-content: center;
+    // outline: 1px solid red;
+    padding-left: 24px;
   }
-  .comments-under__icon-left-arrow {
-    margin-right: 30px;
-    max-width: 25px;
-    max-height: 30px;
-  }
-  .comments-under__icon-right-arrow {
-    margin-left: 30px;
-    max-width: 25px;
-    max-height: 30px;
+  .comments-under__list::before {
+    position: absolute;
+    display: inline-block;
+    content: '';
+    width: 27px;
+    height: 16px;
+    top: 19px;
+    left: -27px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    // outline: 1px solid teal;
+    background-image: url('../images/arrow_left.svg');
   }
 
+  .comments-under__list::after {
+    position: absolute;
+    display: inline-block;
+    content: '';
+    width: 27px;
+    height: 16px;
+    top: 19px;
+    right: -27px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    // outline: 1px solid teal;
+    background-image: url('../images/arrow_left.svg');
+  }
   .comments-under__item:nth-child(-n + 3) {
+    position: relative;
     margin-right: 10px;
   }
   .comments-under__item:nth-child(n + 5) {
