--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -67,61 +67,42 @@
             </ul>
         </div>
 
-        <ul class="comments-under__list list">
-            <li class="comments-under__left-arrow">
-                <a href="#">
-                    <svg class="comments-under__icon-left-arrow">
-                        <use href="./images/sprite.svg#icon-arrow_left"></use>
-                    </svg>
-                </a>
-                <!-- width="25" height="20" -->
-            </li>
+        <ul class="comments-under__list list">           
 
             <li class="comments-under__item">
                 <img class="comments-under-foto__under-foto" src="./images/comments/girl_1.png" width="54" height="54"
-                    alt="фото Тоня Кучерявская">
+                    alt="фото girl_1">
             </li>
 
             <li class="comments-under__item">
                 <img class="comments-under-foto__under-foto" src="./images/comments/girl_2.png" width="54" height="54"
-                    alt="фото Тоня Кучерявская">
+                    alt="фото girl_2">
             </li>
 
             <li class="comments-under__item">
                 <img class="comments-under-foto__under-foto" src="./images/comments/girl_3.png" width="54" height="54"
-                    alt="фото Тоня Кучерявская">
+                    alt="фото girl_3">
             </li>
 
             <li class="comments-under__item">
                 <img class="comments-under-foto__under-foto" src="./images/comments/girl_4.png" width="54" height="54"
-                    alt="фото Тоня Кучерявская">
+                    alt="фото girl_4">
             </li>
             
             <li class="comments-under__item">
                 <img class="comments-under-foto__under-foto" src="./images/comments/girl_5.png" width="54" height="54"
-                    alt="фото Тоня Кучерявская">
+                    alt="фото girl_5">
             </li>
             
             <li class="comments-under__item">
                 <img class="comments-under-foto__under-foto" src="./images/comments/girl_6.png" width="54" height="54"
-                    alt="фото Тоня Кучерявская">
+                    alt="фото girl_6">
             </li>
 
             <li class="comments-under__item">
                 <img class="comments-under-foto__under-foto" src="./images/comments/girl_7.png" width="54" height="54"
-                    alt="фото Тоня Кучерявская">
+                    alt="фото girl_7">
             </li>
-
-            <li class="comments-under__right-arrow">
-                <a href="#">
-                    <svg class="comments-under__icon-right-arrow">
-                        <use href="./images/sprite.svg#icon-arrow_right" width="20" height="20"></use>
-                    </svg>
-                </a>
-            </li>            
-            
-                             
-                
         </ul>
     </div>
 </section>
