--- a/src/sass/components/_waranty.scss
+++ b/src/sass/components/_waranty.scss
@@ -7,6 +7,10 @@
   background-color: #f1f1f1;
 }
 
+.warranty__list {
+  max-width: 280px;
+}
+
 .warranty__item {
   font-style: normal;
   font-weight: 500;
@@ -15,6 +19,12 @@
 
   position: relative;
   list-style: none;
+
+  color: #3d3d3d;
+}
+
+.warranty__item:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .warranty__heading {
@@ -46,11 +56,65 @@
   position: absolute;
   transform: translate(-23px, 20px);
   content: ' ';
-  height: 240px;
+  height: 300px;
   width: 2px;
   background-image: url('.././images/warranty/rect1.svg');
 }
 
 .warranty__accent {
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 768px) {
+  .warranty__list::before {
+    height: 180px;
+    transform: translate(-32px, 20px);
+  }
+
+  .warranty__item::before {
+    transform: translate(-38px, -5px);
+  }
+
+  .warranty__item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .warranty__list {
+    max-width: 560px;
+    margin-left: 80px;
+  }
+}
+
+@media screen and (min-width: 1316px) {
+  .warranty__heading {
+    font-size: 46px;
+    line-height: 1.3em;
+  }
+  .warranty__list {
+    max-width: 1040px;
+    margin-left: 110px;
+    padding-top: 50px;
+    padding-bottom: 45px;
+  }
+
+  .warranty__item {
+    font-size: 20px;
+    line-height: 1.4em;
+  }
+
+  .warranty__list::before {
+    height: 240px;
+    transform: translate(-40px, 20px);
+  }
+
+  .warranty__item::before {
+    transform: translate(-49px, 0px);
+    width: 22px;
+    height: 38px;
+    background-color: #f1f1f1;
+  }
+
+  .warranty {
+    margin-bottom: 130px;
+  }
 }
