--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,5 +1,8 @@
 .page-header {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .page-header-inner {
@@ -55,7 +58,7 @@
     visibility: hidden;
     pointer-events: none;
     transform: scale(0);
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &.is-open {
       opacity: 1;
@@ -96,7 +99,7 @@
   position: relative;
   width: 209px;
   height: 44px;
-  margin: 32px;
+  margin-bottom: 32px;
   border: 1px solid transparent;
   border-radius: 22px;
   background-color: $primaryWhiteColor;
