--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -15,9 +15,8 @@
   }
 }
 
-// @media screen and (min-width: 1316px) {
-//   .container {
-//     max-width: 1316px;
-//   }
-// }
-
+@media screen and (min-width: 1316px) {
+  .container {
+    max-width: 1316px;
+  }
+}
