Добавлен слайдер и картинки

--- a/src/partials/coments.html
+++ b/src/partials/coments.html
@@ -1,6 +1,123 @@
 <section class="coments">
-    <div class="coments-container">
-        <!-- Максим -->
-        <h2>Slider Maksim</h2>
-    </div>
+        <!-- <h2>Slider Maksim</h2> -->
+        <picture>
+            <source srcset="./images/coments/slider-d.jpg 1x, ./images/coments/slider-d@2x.jpg 2x" media="(min-width:1280px)" />
+            <source srcset="./images/coments/slider-t.jpg 1x, ./images/coments/slider-t@2x.jpg 2x" media="(min-width:768px)" />
+            <source srcset="./images/coments/slider-m.jpg 1x, ./images/coments/slider-m@2x.jpg 2x" media="(min-width:320px)" />
+            <img class="coments-image" src="./images/coments/slider-m.jpg" alt="довольные клиенты"
+                aria-label="довольные клиенты" />
+        </picture>
+        <div class="coments-container">
+                <ul class="slider-coments">
+                    <li>
+                        <img class="face-coments" src="./images/coments/face1.jpg" alt="">
+                        <div class="block-coments">
+                            <svg class="quote-coments">
+                                <use href="./images/coments/slider-sprite.svg#quot"></use>
+                            </svg>
+                            <p class="text-coments">
+                                Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam
+                                nunc,
+                                accumsan
+                                congue. Lorem ipsum primis in nibh vel risus.
+                            </p>
+                        </div>
+                        <ul class="dots-coments">
+                            <li>
+                                <svg width="4" height="4">
+                                    <use href="./images/coments/slider-sprite.svg#dot"></use>
+                                </svg>
+                            </li>
+                            <li>
+                                <svg width="4" height="4">
+                                    <use href="./images/coments/slider-sprite.svg#dot"></use>
+                                </svg>
+                            </li>
+                            <li>
+                                <svg width="4" height="4">
+                                    <use href="./images/coments/slider-sprite.svg#dot"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                        <p>
+                            <span class="name-coments">
+                                Emily, Los Angeles
+                            </span>
+                        </p>
+                    </li>
+                    <li>
+                        <img class="face-coments" src="./images/coments/face2.jpg" alt="">
+                        <div class="block-coments">
+                            <svg class="quote-coments">
+                                <use href="./images/coments/slider-sprite.svg#quot"></use>
+                            </svg>
+                            <p class="text-coments">
+                                Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam
+                                nunc,
+                                accumsan
+                                congue. Lorem ipsum primis in nibh vel risus.
+                            </p>
+                        </div>
+                        <ul class="dots-coments">
+                            <li>
+                                <svg width="4" height="4">
+                                    <use href="./images/coments/slider-sprite.svg#dot"></use>
+                                </svg>
+                            </li>
+                            <li>
+                                <svg width="4" height="4">
+                                    <use href="./images/coments/slider-sprite.svg#dot"></use>
+                                </svg>
+                            </li>
+                            <li>
+                                <svg width="4" height="4">
+                                    <use href="./images/coments/slider-sprite.svg#dot"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                        <p>
+                            <span class="name-coments">
+                                Emily, Los Angeles
+                            </span>
+                        </p>
+                    </li>
+                    <li>
+                        <img class="face-coments" src="./images/coments/face3.jpg" alt="">
+                        <div class="block-coments">
+                            <svg class="quote-coments">
+                                <use href="./images/coments/slider-sprite.svg#quot"></use>
+                            </svg>
+                            <p class="text-coments">
+                                Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam
+                                nunc,
+                                accumsan
+                                congue. Lorem ipsum primis in nibh vel risus.
+                            </p>
+                        </div>
+                        <ul class="dots-coments">
+                            <li>
+                                <svg width="4" height="4">
+                                    <use href="./images/coments/slider-sprite.svg#dot"></use>
+                                </svg>
+                            </li>
+                            <li>
+                                <svg width="4" height="4">
+                                    <use href="./images/coments/slider-sprite.svg#dot"></use>
+                                </svg>
+                            </li>
+                            <li>
+                                <svg width="4" height="4">
+                                    <use href="./images/coments/slider-sprite.svg#dot"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                        <p>
+                            <span class="name-coments">
+                                Emily, Los Angeles
+                            </span>
+                        </p>
+                    </li>
+                </ul>
+                
+            </div>
 </section>
