Добавил правильные маржины тексту списка

--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -209,6 +209,7 @@
     .list--item-text {
         font-size: 20px;
         line-height: 1.2;
+        margin-top: 10px;
     }
     .problems__container {
         top: 62%;
