--- a/src/partials/backdrop-modal.html
+++ b/src/partials/backdrop-modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop" data-modal>
   <div class="modal-window animate__bounceInRight">
     <button class="close-btn button animate" type="button" data-modal-close>
       <svg class="close-btn-icon" width="17" height="17">
