--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,101 +1,93 @@
 <!-- HEADER -->
 <header class="header">
-    <div class="container">
-      <nav class="navigation">
-
-<!-- LOGO -->
-<a class="logo" href="index.html">
-  <div class="logo-secondfloor ">
-  Hell
+  <div class="container">
+    <nav class="navigation">
+      <!-- LOGO -->
+      <a class="logo" href="index.html">
+        <div class="logo-secondfloor">
+          Hell
           <svg class="logo-fire" width="13.93" height="19.38">
-          <use href="./images/sprite.svg#icon-fire"></use>
+            <use href="./images/sprite.svg#icon-fire"></use>
           </svg>
-  EN
+          EN
+        </div>
+        <div class="logo-firstfloor">
+          <span class="accent">адский </span>
+          <span class="eng">английский</span>
+        </div>
+      </a>
+      <svg width="40" height="40">
+        <use href="./images/instagram.svg"></use>
+      </svg>
+      <!-- NAV-DESKTOP-->
+
+      <ul class="nav-list-desktop">
+        <li class="nav-item-desktop">
+          <a class="nav-link-desktop" href="index.html">Программы обучения</a>
+        </li>
+        <li class="nav-item-desktop">
+          <a class="nav-link-desktop current" href="#">О нас</a>
+        </li>
+        <li class="nav-item-desktop">
+          <a class="nav-link-desktop" href="#">Варианты обучения</a>
+        </li>
+        <li class="nav-item-desktop">
+          <a class="nav-link-desktop" href="#">Контакты</a>
+        </li>
+      </ul>
+      <!-- TABLET-HEADER-BTN-->
+
+      <button class="btn btn-tablet" type="button" class="btn">
+        консультация по телефону
+      </button>
+      <!-- MENU-BUTTON -->
+      <button
+        type="button"
+        class="menu-btn"
+        aria-expanded="false"
+        aria-controls="menu-container"
+        data-menu-button
+      >
+        <svg class="menu-btn-icon" aria-label="Переключатель мобильного меню">
+          <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
+          <use class="icon-cross" href="/images/sprite.svg#icon-cross"></use>
+        </svg>
+      </button>
+      <!-- BURGER-MENU  -->
+      <div class="burger-menu container" id="menu-container" data-menu>
+        <div class="logo-wrapper">
+          <a class="logo" href="index.html">
+            <span class="logo-secondfloor menu">
+              HEII
+              <svg class="logo-fire" width="14" height="19">
+                <use href="./images/sprite.svg#icon-fire"></use>
+              </svg>
+              EN
+            </span>
+            <span class="logo-firstfloor menu"
+              ><span class="accent">aдский</span> английский</span
+            >
+          </a>
+        </div>
+
+        <!-- BURGER-MENU NAVIGATION -->
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Программы обучения</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link current" href="#">О нас</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Варианты обучения</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Контакты</a>
+          </li>
+        </ul>
+        <!-- BURGER-MENU BUTTON  -->
+        <button type="button" class="btn">консультация по телефону</button>
+      </div>
+    </nav>
   </div>
-  <div class="logo-firstfloor">
-      <span class="accent">адский </span>
-      <span class="eng">английский</span>
-  </div>
-</a>
-<!-- NAV-DESKTOP-->
-
-<ul class="nav-list-desktop">
-<li class="nav-item-desktop">
-  <a class="nav-link-desktop" href="index.html">Программы обучения</a>
-</li>
-<li class="nav-item-desktop">
-  <a class="nav-link-desktop  current" href="#">О нас</a>
-</li>
-<li class="nav-item-desktop">
-  <a class="nav-link-desktop" href="#">Варианты обучения</a>
-</li>
-<li class="nav-item-desktop">
-  <a class="nav-link-desktop" href="#">Контакты</a>
-</li>
-</ul>
-<!-- TABLET-HEADER-BTN-->
-
-<button class="btn btn-tablet" type="button" class="btn">
-консультация по телефону
-</button>   
-<!-- MENU-BUTTON -->
-        <button 
-          type="button"
-          class="menu-btn"
-          aria-expanded="false"
-          aria-controls="menu-container"
-          data-menu-button
-        >
-          <svg
-            class="menu-btn-icon"
-            aria-label="Переключатель мобильного меню"
-          >
-            <use
-              class="icon-menu"
-              href="./images/sprite.svg#icon-menu"
-            ></use>
-            <use
-              class="icon-cross"
-              href="/images/sprite.svg#icon-cross"
-            ></use>
-          </svg>
-        </button>
-<!-- BURGER-MENU  -->
-        <div class="burger-menu container" id="menu-container" data-menu>
-          <div class="logo-wrapper">
-            <a class="logo" href="index.html">
-              <span class="logo-secondfloor menu">
-                HEII
-                <svg class="logo-fire" width="14" height="19">
-                  <use href="./images/sprite.svg#icon-fire"></use>
-                </svg>
-                EN
-              </span>
-              <span class="logo-firstfloor menu"><span class="accent">aдский</span> английский</span>
-            </a>
-          </div>
-
-<!-- BURGER-MENU NAVIGATION -->
-            <ul class="nav-list">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Программы обучения</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link  current" href="#">О нас</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Варианты обучения</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Контакты</a>
-              </li>
-            </ul>
-<!-- BURGER-MENU BUTTON  -->
-            <button type="button" class="btn">
-              консультация по телефону
-            </button>
-          
-       </div>
-      </nav>
-    </div>
-</header> 
+</header>
