--- a/src/sass/components/_backdrop-modal.scss
+++ b/src/sass/components/_backdrop-modal.scss
@@ -27,7 +27,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: var(--secondary-bg-color);
+  background-color: var(--dark-bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-left: 2px solid var(--accent-color);
@@ -108,7 +108,7 @@
     font-size: 20px;
     line-height: 1.167;
     letter-spacing: 0.03em;
-    color: var(--primary-text-color);
+    color: var(--accent-color);
     margin-bottom: 10px;
   }
 
@@ -164,9 +164,9 @@
     line-height: 1.25;
     letter-spacing: 0.08em;
     text-transform: uppercase;
-    color: var(--accent-color);
-    background-color: var(--white-color);
-    outline: 1px solid var(--accent-color);
+    color: var(--white-color);
+    background-color: var(--accent-color);
+    // outline: 1px solid var(--accent-color);
     min-width: 120px;
     padding: 8px;
     cursor: pointer;
@@ -176,8 +176,9 @@
 
     &:hover,
     &:focus {
-      color: var(--white-color);
-      background-color: var(--accent-color);
+      color: var(--accent-color);
+      background-color: var(--white-color);
+      outline: 1px solid var(--accent-color);
     }
   }
 
