--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -1,73 +1,73 @@
 // LOGO
 .logo {
-    display: block;
-    font-style: normal;
-    line-height: 0;
-    letter-spacing: 0.069em;
+  display: block;
+  font-style: normal;
+  line-height: 0;
+  color: var(--primary-text-color);
 
-    color: var(--primary-text-color);
-    
-    &:visited {
-        color: inherit;
-    }
+  //   &:visited {
+  //     color: inherit;
+  //   }
 }
 
-.burger-menu.is-open .logo {
-    color: var(--primary-white-color);  
+.burger-menu.is-open + .logo {
+  color: var(--white-color);
 }
 .logo-wrapper {
-    text-align: start;
+  text-align: start;
 }
 .logo-secondfloor {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 15px;
-    font-weight: 800;
-    line-height: 1.35;
-
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+  font-weight: 800;
+  line-height: 1.35;
 }
 
 .logo-fire {
-fill: var(--accent-color);
+  display: block;
+  width: 14px;
+  height: 20px;
+  margin-right: 3px;
+  margin-left: 3px;
+  fill: var(--accent-color);
 }
 
 .logo-firstfloor {
-    display: inline-flex;
-    align-items: center;
-
-    font-size: 5px;
-    font-weight: 700;
-    line-height: 1.5;
-    text-align: center;
-    text-transform: uppercase;
+  display: inline-flex;
+  font-weight: 700;
+  font-size: 5px;
+  line-height: 2.2;
+  letter-spacing: 0.1em;
+  text-align: center;
+  text-transform: uppercase;
 }
 .accent {
-    margin-right: 3px;
+  margin-right: 3px;
 }
 
 // Tablet+Desctop
 @media screen and (min-width: 768px) {
-    .logo-secondfloor{
-        font-size: 26px;
-        line-height: 1.2;
-        letter-spacing: 0.04em;
-    }
-    .logo-firstfloor {
-        font-weight: bold;
-        font-size: 8px;
-        line-height: 1.25;
-        letter-spacing: 0.3em;
-    }
-    .accent {
-            margin-right: 4px;
-            color: var(--accent-color);
-        }
-    .logo-fire {
-        width: 21.56px;
-        height: 29.99px;
-        margin-right: 3px;
-        margin-bottom: 5px;
-        margin-left: 3px;
-    }
-    }
+  .logo-secondfloor {
+    font-size: 26px;
+    line-height: 1.23;
+    letter-spacing: 0.04em;
+  }
+  .logo-firstfloor {
+    font-weight: 700;
+    font-size: 8px;
+    line-height: 1.25;
+    letter-spacing: 0.18em;
+  }
+  .accent {
+    color: var(--accent-color);
+    margin-right: 5px;
+  }
+  .logo-fire {
+    width: 22px;
+    height: 30px;
+    margin-right: 4px;
+    margin-bottom: 5px;
+    margin-left: 4px;
+  }
+}
