--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -164,7 +164,11 @@
         height: 472px;
         background-image: url(../images/problems/problematic-desktop.png);
         z-index: 0;
-
+        @media screen and (min-device-pixel-ratio: 2) and (min-width: 1344px),
+        screen and (min-resolution: 192dpi) and (min-width: 1344px),
+        screen and (min-resolution: 2dppx) and (min-width: 1344px) {
+            background-image: url(../images/problems/problematic-desktop@2x.png);
+        }
     }
     .problems__title{
         max-width: 866px;
