Закончен стиль под десктоп teacher

--- a/src/partials/main_problems.html
+++ b/src/partials/main_problems.html
@@ -4,37 +4,37 @@
     <div class="container">
         <div class="main_problems__black">
             <h2 class="main_problems__title">
-                Главные проблемы учеников на English ВНО, которые мы <span>помогаем</span> решить</h2>
+                Главные проблемы учеников на English ВНО, которые мы <span class="main_problems__title-orange">помогаем</span> решить</h2>
             <div class="main_problems__img">
                 <img src="images/main_problems/fire_under_hero.png" alt="fire_under_hero" / width="300px">
             </div>
             <div class="main_problems__list">
                 <ul>
                     <li class="main_problems__item">
-                        <div class="item-number">01</div>
-                        Название грамматики
+                        <div class="main_problems__item-number">01</div>
+                        <span class="main_problems__item-desc">Название грамматики</span>
                     </li>
                     <li class="main_problems__item">
-                        <div class="item-number">02</div>
-                        Неумение воcпринимать <br>
-                        устную английскую речь
+                        <div class="main_problems__item-number">02</div>
+                        <span class="main_problems__item-desc">Неумение воcпринимать <br>
+                        устную английскую речь</span>
                     </li>
                     <li class="main_problems__item">
-                        <div class="item-number">03</div>
-                        Скупой словарный запас <br>
-                        для написани сочинения
+                        <div class="main_problems__item-number">03</div>
+                        <span class="main_problems__item-desc">Скупой словарный запас <br>
+                        для написани сочинения</span>
                     </li>
                     <li class="main_problems__item">
-                        <div class="item-number"> 04</div>
-                        Подготовка в одиночку
+                        <div class="main_problems__item-number"> 04</div>
+                        <span class="main_problems__item-desc">Подготовка в одиночку</span>
                     </li>
                     <li class="main_problems__item">
-                        <div class="item-number">05</div>
-                        Отсутствие единого <br>ресурса знаний
+                        <div class="main_problems__item-number">05</div>
+                        <span class="main_problems__item-desc">Отсутствие единого <br>ресурса знаний</span>
                     </li>
                     <li class="main_problems__item">
-                        <div class="item-number">06</div>
-                        Недостаток <br>самоорганизации и лень
+                        <div class="main_problems__item-number">06</div>
+                        <span class="main_problems__item-desc">Недостаток <br>самоорганизации и лень</span>
                     </li>
                 </ul>
             </div>
