--- a/src/sass/layout/_teacher.scss
+++ b/src/sass/layout/_teacher.scss
@@ -1,13 +1,15 @@
 @media screen and (min-width: 320px) {
   .teacher {
-    padding-top: 39px;
+    // padding-top: 39px;
+    padding-bottom: 50px;
   }
   .teacher__title {
     max-width: 320px;
+    margin-bottom: 20px;
     font-style: normal;
     font-weight: 800;
     font-size: 20px;
-    line-height: 1.3;
+    line-height: 1.36;
     letter-spacing: 0.03em;
   }
 
@@ -50,8 +52,11 @@
   }
 
   .teacher__link {
-    font-size: 14px;
-    color: #ff6b09;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.67;
+    text-decoration-line: underline;
+    color: var(--orange-color);
   }
 }
 
@@ -83,18 +88,38 @@
 
 @media screen and (min-width: 1344px) {
   .teacher {
-    padding-top: 650px;
+    padding-bottom: 100px;
   }
   .teacher__title {
-    max-width: 1344px;
+    font-weight: 800;
+    font-size: 46px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    color: var(--black-color);
   }
   .teacher__desc {
-    max-width: 495px;
+    max-width: 697px;
   }
+
   .teacher__p {
-    font-size: 15px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.56;
+    color: #b9b9b9;
   }
   .teacher__about .teacher__list li {
     padding-left: 50px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.06em;
+    color: var(--black-color);
+  }
+  .teacher__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.56;
+    text-decoration-line: underline;
+    color: #ff6b09;
   }
 }
