--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,8 +9,10 @@
 // @import './layout/footer';
 // @import './layout/header';
 // @import './layout/hero';
+@import './layout/main_problems';
 @import './layout/how-we-do-it';
 @import './layout/programm';
+@import './layout/teacher';
 @import './layout/why-us';
 @import './layout/registration';
 
