--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -32,10 +32,8 @@
                         преподаванию и методикам написания
                         сочинений.</p>
                     <p class="teacher__p">В числе пройденных: English Grammar and Essay Writing (Berkeley), English
-                        Grammar&Style (The University of Queesland),
-                        How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching
-                        (GEMS education),
-                        Powerful Tools for Teaching and Learning (University of Houston).</p>
+                        Grammar&Style (The University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching
+                        (GEMS education), Powerful Tools for Teaching and Learning (University of Houston).</p>
                     <a href="#" class="teacher__link link" target="_blank">Cambrige English Entry Level Certificate</a>
                 </div>
             </div>
