--- a/src/sass/layout/_main_problems.scss
+++ b/src/sass/layout/_main_problems.scss
@@ -4,9 +4,10 @@
     height: 693px;
     background-color: var(--black-color);
   }
+
   .main_problems__black {
-    height: 560px;
     position: relative;
+    height: 545px;
   }
 
   .main_problems__img {
@@ -18,28 +19,25 @@
 
   .main_problems__title {
     padding-top: 50px;
-    font-style: normal;
     font-weight: 800;
     font-size: 20px;
-    line-height: 1.35;
-    color: #fff;
+    line-height: 1.36;
+    color: var(--white-color);
     letter-spacing: 0.03em;
-    // max-width: 280px;
-    span {
-      color: var(--orange-color);
-    }
+  }
+
+  .main_problems__title-orange {
+    color: var(--orange-color);
   }
 
   .main_problems__list {
     display: block;
     position: absolute;
-    top: 1563px;
     left: 50%;
     transform: translateX(-50%);
-    width: 320px;
-    margin-top: 20px;
+    margin-top: 27px;
+    // margin-bottom: 50px;
     width: 280px;
-    height: 660px;
     list-style: none;
     background-color: var(--white-color);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
@@ -50,25 +48,40 @@
     }
     li {
       padding-top: 15px;
-      font-size: 16px;
       line-height: 30px;
     }
-    .item-number {
-      font-size: 16px;
+
+    .main_problems__item-desc {
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 1.43;
+      letter-spacing: 0.08em;
+      color: var(--black-color);
+    }
+
+    .main_problems__item-number {
+      font-size: 14px;
+      line-height: 1.214;
+      letter-spacing: 0.08em;
+      font-weight: 700;
       color: #ff6b09;
       position: relative;
       padding-left: 20px;
-      padding-bottom: 10px;
+      padding-bottom: 5px;
 
       &::after {
         position: absolute;
-        top: 14px;
+        top: 7px;
         left: -1px;
         content: '';
         display: inline-block;
         width: 15px;
         height: 2px;
-        background-color: #ff6b09;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.649;
+        letter-spacing: 0.08em;
+        background-color: var(--orange-color);
         margin-bottom: 20px;
       }
     }
@@ -77,7 +90,7 @@
 
 @media screen and (min-width: 768px) {
   .main_problems {
-    height: 360px;
+    height: 491.5px;
   }
   .main_problems__title {
     width: 400px;
@@ -114,11 +127,26 @@
 @media screen and (min-width: 1344px) {
   .main_problems {
     position: relative;
+    height: 710px;
+    // margin-top: 130px;
+    margin-bottom: 130px;
+  }
+
+  .main_problems__black {
+    width: 1680px;
+    height: 560px;
   }
   .main_problems__title {
-    font-size: 25px;
-    line-height: 40px;
+    width: 866px;
+    height: 178px;
+    padding-bottom: 100px;
+    // padding-left: 183px;
+    // padding-right: 631px;
     font-weight: 800;
+    font-size: 46px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    color: var(--white-color);
   }
 
   .main_problems__img {
@@ -128,8 +156,12 @@
     display: block;
   }
   .main_problems__list {
+    position: absolute;
+    top: 55%;
+    left: 39%;
+    transform: translateX(-50%);
     margin-top: 50px;
-    width: 1214px;
+    width: 1314px;
     height: 380px;
   }
   .main_problems__item {
