--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   
-    <div>
-      <p>homemade ice cream made</p>
+    <div class="footer-text">
+      <p class="footer-row">homemade ice cream made</p>
       <h3>with passion</h3>
     </div>
     <div class="footer-socials">
@@ -9,7 +9,7 @@
         <li class="socials-item">
           <a href="https://github.com/" class="socials-link">github</a>
           <svg class="socials-icon" width="32" height="32">
-            <!-- <use href="../images/icons/simbol-defs.svg#icon-github"></use> -->
+            <!-- <use href="./images/icons/simbol-defs.svg#icon-github.svg"></use> -->
           </svg>
         </li>
         <li class="socials-item">
