--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,19 +1,28 @@
 .footer {
   background-color: #fff5f6;
+  padding-top: 183px;
+  padding-left: 20px;
+  padding-right: 20px;
+
 }
-p {
+.footer-row {
   font-family: Titan One;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 21px;
-text-transform: uppercase;
-color: #FFA5BA;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  text-transform: uppercase;
+  color: #FFA5BA;
+  margin-top: 0;
+  margin-bottom: 17px;
+
+}
 }
 ul {
   list-style: none;
-
+  display: inline-flex;
 }
+
 h3 {
   font-family: Titan One;
 font-style: normal;
@@ -23,6 +32,8 @@ line-height: 1.14;
 letter-spacing: 0.04em;
 text-transform: uppercase;
 color: #D41443;
+padding-right: 100px;
+padding-bottom: 43px;
 }
 a {
   text-decoration: none;
@@ -35,4 +46,10 @@ font-size: 14px;
 line-height: 1.52;
 text-align: center;
 color: #907E82;
+}
+.footer-socials {
+  border-bottom: 1px solid #E1E1E1;
+}
+.footer-text {
+  display: block;
 }
