--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -43,8 +43,8 @@
   @media screen and (max-width: 1200px) {
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
+    right: 0;
+    width: 250px;
     height: 100vh;
     padding-top: 60px;
     // padding-left: 20px;
